<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2017-2021, org.smartboot. All rights reserved.
  ~ project name: smart-servlet
  ~ file name: pom.xml
  ~ Date: 2021-05-14
  ~ Author: sandao (zhengjunweimail@163.com)
  ~
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <groupId>org.smartboot.servlet.test</groupId>
    <version>1.0-SNAPSHOT</version>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>testsuite</artifactId>
    <packaging>war</packaging>
    <properties>
        <jakarta.tck.version>10.0.0-SNAPSHOT</jakarta.tck.version>
        <version.arquillian_core>1.7.0.Alpha14</version.arquillian_core>
        <junit.version>5.9.2</junit.version>
        <version.shrinkwrap>3.1.4</version.shrinkwrap>
        <surefire.version>3.0.0-M7</surefire.version> <!-- 3.0.0-M7-SNAPSHOT -->
        <version.weld>3.1.8.Final</version.weld>
        <version.cdi-api>2.0</version.cdi-api>
        <version.glassfish.el>2.2</version.glassfish.el>
        <version.jsp-api>2.2</version.jsp-api>
        <version.servlet-api>4.0.1</version.servlet-api>
        <version.h2>2.1.214</version.h2>
        <version.slf4j>2.0.0</version.slf4j>
        <slf4j.version>2.0.6</slf4j.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <fork.argLine>-Xmx8g -Xms4g</fork.argLine>
        <http2.timeout></http2.timeout>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.smartboot.servlet</groupId>
            <artifactId>servlet-core</artifactId>
            <version>0.4</version>
        </dependency>
        <dependency>
            <groupId>org.junit</groupId>
            <artifactId>junit-bom</artifactId>
            <version>5.9.3</version>
            <type>pom</type>
            <scope>import</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-bom</artifactId>
            <version>${version.shrinkwrap}</version>
            <scope>test</scope>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-depchain</artifactId>
            <version>${version.shrinkwrap}</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.container</groupId>
            <artifactId>arquillian-container-spi</artifactId>
            <version>${version.arquillian_core}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.container</groupId>
            <artifactId>arquillian-container-test-spi</artifactId>
            <version>${version.arquillian_core}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit5</groupId>
            <artifactId>arquillian-junit5-container</artifactId>
            <version>${version.arquillian_core}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.weld.servlet</groupId>
            <artifactId>weld-servlet-core</artifactId>
            <version>${version.weld}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.enterprise</groupId>
            <artifactId>cdi-api</artifactId>
            <version>${version.cdi-api}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.web</groupId>
            <artifactId>el-impl</artifactId>
            <version>${version.glassfish.el}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>jsp-api</artifactId>
            <version>${version.jsp-api}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>${version.servlet-api}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${version.h2}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>2.1.1</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- needed for intellij -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>jakartatck</groupId>
            <artifactId>servlet</artifactId>
            <version>${jakarta.tck.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.glassfish.metro</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>jakartatck</groupId>
            <artifactId>libutil</artifactId>
            <version>${jakarta.tck.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.glassfish.metro</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire.version}</version>
                    <configuration>
                        <!-- this need some times to run -->
                        <argLine>${fork.argLine} -Duser.language=en -Duser.country=US
                            -Djava.locale.providers=COMPAT,CLDR
                            -Djava.protocol.handler.pkgs=javax.net.ssl
                            -Djavax.net.ssl.keyStore=${project.build.testOutputDirectory}/certificates/clientcert.jks
                            -Djavax.net.ssl.keyStorePassword=changeit
                            -Djavax.net.ssl.trustStore=${project.build.directory}/cacerts.jks
                        </argLine>
                        <forkedProcessTimeoutInSeconds>15000</forkedProcessTimeoutInSeconds>
                        <dependenciesToScan>
                            <dependenciesToScan>jakartatck:servlet</dependenciesToScan>
                        </dependenciesToScan>
                        <systemProperties>
                            <http2.timeout>${http2.timeout}</http2.timeout>
                        </systemProperties>
                        <includes>
                            <include>**/URLClient*</include>
                            <include>**/Client*</include>
                            <!--              <include>**/jakarta_servlet/scinitializer/addfilter1/URLClient*</include>-->
                        </includes>
                        <trimStackTrace>false</trimStackTrace>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.basepom.maven</groupId>
                    <artifactId>duplicate-finder-maven-plugin</artifactId>
                    <version>1.5.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>unpack</id>
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>jakartatck</groupId>
                                    <artifactId>libutil</artifactId>
                                    <type>jar</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.testOutputDirectory}/</outputDirectory>
                                    <includes>**/**cts_cert,**/**clientcert.jks,**/**clientcert.p12</includes>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>keytool-maven-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>importCertificate</goal>
                        </goals>
                        <phase>process-test-resources</phase>
                    </execution>
                </executions>
                <configuration>
                    <!-- "$JAVA_HOME/bin/keytool -import -noprompt -alias cts -dname \"CN=CTS, OU=Java Software, O=Sun Microsystems Inc., L=Burlington, ST=MA, C=US\"
                    -file servlet-tck/bin/certificates/cts_cert -storetype JKS  -keystore cacerts.jks -storepass changeit -keypass changeit" -->
                    <noprompt>true</noprompt>
                    <alias>cts</alias>
                    <dname>CN=CTS, OU=Java Software, O=Sun Microsystems Inc., L=Burlington, ST=MA, C=US</dname>
                    <file>${project.build.testOutputDirectory}/certificates/cts_cert</file>
                    <storetype>JKS</storetype>
                    <keystore>${project.build.directory}/cacerts.jks</keystore>
                    <storepass>changeit</storepass>
                    <keypass>changeit</keypass>
                    <skipIfExist>true</skipIfExist>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>